Made spacing changes and fixed scrollbar

--- a/src/app/components/Blocks/title/title.component.scss
+++ b/src/app/components/Blocks/title/title.component.scss
@@ -38,6 +38,5 @@
 }
 
 div {
-  margin: 0 3px 0 3px;
+  margin: 0 3px 0 5px;
 }
-
