--- a/src/app/components/SideNav/Edit/joint-edit-panel/joint-edit-panel.component.scss
+++ b/src/app/components/SideNav/Edit/joint-edit-panel/joint-edit-panel.component.scss
@@ -10,10 +10,20 @@
   $foreground: map.get($theme, foreground);
 }
 
+#editJoint {
+  background-color: white;
+  border-top: 5px solid #3F51B5;
+  border-radius: 3px;
+  box-shadow: 3px 3px 3px gray;
+  width: 100%;
+  max-height: calc(90vh - 30px);
+}
+
 .scroll-container {
   max-height: calc(100vh - 150px);
-  overflow:hidden;
-  overflow-y:auto;
+  overflow-y: auto;
+  width: 100%;
+  overflow-x: hidden;
 }
 .scroll-container::-webkit-scrollbar {
   width: 8px;
@@ -63,15 +73,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-}
-
-#editJoint {
-  background-color: white;
-  border-top: 5px solid #3F51B5;
-  border-radius: 3px;
-  box-shadow: 3px 3px 3px gray;
-  width: 100%;
-  max-height: calc(90vh - 30px);
 }
 
 .flex-container {
