--- a/src/styles.css
+++ b/src/styles.css
@@ -42,7 +42,7 @@ input[type=number] {
     letter-spacing: .25px;
     color: grey;
     font-size: 14px;
-    margin: 5px 5px 6px 14px;
+    margin: 5px 5px 6px 10px;
   }
 
   title-block {
